# etl-ufba

./: .gitignore  README.md  pyproject.toml  run.ps1
db/: .gitignore
dbt/: dbt_project.yml  profiles.yml
dbt/macros/: clean_educacao.sql  clean_flgs_nse.sql  clean_local.sql  clean_ocupacao.sql  clean_tipo_escola.sql
dbt/models/: sources.yml
dbt/models/staging/: stg_bi_vestibular_2009.sql  stg_bi_vestibular_2010.sql  stg_bi_vestibular_2011.sql  stg_bi_vestibular_2012.sql  stg_bi_vestibular_2013.sql  stg_ufba_academica.sql  stg_vestibular_2005.sql  stg_vestibular_2006.sql  stg_vestibular_2007.sql  stg_vestibular_2008.sql  stg_vestibular_2009.sql  stg_vestibular_2010.sql  stg_vestibular_2011.sql  stg_vestibular_2012.sql  stg_vestibular_2013.sql
dbt/seeds/: cidade_polo.csv  cursos.csv  situacao_vestibular.csv
extract/: download.py  unzip.py
